mobile hambergur menu & darkmode colors finished

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,5 @@
 .app{
-    background-color: rgb(245,245,245);
+    background-color: rgb(231, 231, 231);
     font-family: 'vazirmatn';
     transition: all 0.2s;
     /* min-height: 100vh; */
